--- a/index.html
+++ b/index.html
@@ -40,5 +40,7 @@
 <body style="text-align: center">
     <h1> Game Frameworks </h1>
     <a href="mailto:service@frameworks.games"><button class="button">Join Organization :)</button></a>
+    <a href="https://t.me/+ADAPYoQaFYQ3N2M1"><button class="button">Join TG group :)</button></a>
+    
 </body>
 </html>
