--- a/index.html
+++ b/index.html
@@ -3,44 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Game Frameworks</title>
-    <style>
-        a {
-            display: block;
-            text-decoration: none;
-            color: #2c3e50;
-            margin: auto;
-        }
-
-        .button {
-            --bg: #000;
-            --hover-bg: #ff90e8;
-            --hover-text: #000;
-            color: #fff;
-            border: 1px solid var(--bg);
-            border-radius: 4px;
-            padding: 0.8em 2em;
-            background: var(--bg);
-            transition: 0.2s;
-        }
-
-        .button:hover {
-            color: var(--hover-text);
-            transform: translate(-0.25rem,-0.25rem);
-            background: var(--hover-bg);
-            box-shadow: 0.25rem 0.25rem var(--bg);
-        }
-
-        .button:active {
-            transform: translate(0);
-            box-shadow: none;
-        }
-
-    </style>
+    <link rel="shortcut icon" href="favicon.ico"/>
+    <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
-<body style="text-align: center">
-    <h1> Game Frameworks </h1>
-    <a href="mailto:service@frameworks.games"><button class="button">Join Organization :)</button></a>
-    <a href="https://t.me/+ADAPYoQaFYQ3N2M1"><button class="button">Join TG group :)</button></a>
-    
+<body>
+
+    <div class="container_wrapper">
+        <div class="_logo">
+            <img class="logo" src="img/logo.png">
+        </div>
+        <div>
+            <h2>Poker Game Framework Community</h2>
+        </div>
+        <div class="_join">
+            <a href="https://t.me/+ADAPYoQaFYQ3N2M1" target="_blank">
+                <button>Join on Telegram</button>
+            </a>
+            <a href="https://discord.gg/zQT6T2SMq2" target="_blank">
+                <button>Join on Discord</button>
+            </a>
+        </div>
+    </div>
+    <script src="js/index.js"></script>
 </body>
 </html>
